[gd_scene load_steps=7 format=2]

[ext_resource path="res://Stages_Reina/Enemies/Dinergate/Dinergate_SpriteFrames.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Stages/EnemyBase.tscn" type="PackedScene" id=2]
[ext_resource path="res://Stages_Reina/Enemies/DinergateGrass.gd" type="Script" id=3]
[ext_resource path="res://Stages_Reina/Enemies/Dinergate/VinesThing.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sounds/Classic/S3K_A2.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 77.66

[node name="DinergateGrass" instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="AnimatedSprite" parent="." index="0"]
position = Vector2( 0, -32 )
frames = ExtResource( 1 )
animation = "moving_green"

[node name="areaCheckPlayer" type="Area2D" parent="." index="6"]
position = Vector2( -144, 0 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="areaCheckPlayer" index="0"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="VinesThing" parent="." index="7" instance=ExtResource( 4 )]

[node name="VinesThing2" parent="." index="8" instance=ExtResource( 4 )]
position = Vector2( -144, 0 )

[node name="VinesThing3" parent="." index="9" instance=ExtResource( 4 )]
position = Vector2( -224, 0 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="10"]
position = Vector2( -144, -16 )
stream = ExtResource( 5 )
bus = "Player/Enemies"
area_mask = 2

[connection signal="body_entered" from="areaCheckPlayer" to="." method="_on_Area2D2_body_entered"]
